--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "barryvdh/laravel-ide-helper":"2.1.*",
-        "stevenyangecho/laravel-u-editor": "~1.3"
+        "stevenyangecho/laravel-u-editor": "~1.3",
+        "zizaco/entrust": "5.2.x-dev"
     },
     "autoload": {
         "classmap": [
