--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "barryvdh/laravel-ide-helper":"2.1.*",
         "stevenyangecho/laravel-u-editor": "~1.3",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "5.2.x-dev",
+        "simplesoftwareio/simple-qrcode": "1.3.*",
+        "overtrue/laravel-wechat":"~3.0"
     },
     "autoload": {
         "classmap": [
