--- a/public/web.config
+++ b/public/web.config
@@ -19,5 +19,8 @@
         </rule>
       </rules>
     </rewrite>
+        <handlers>
+            <add name="fastcgi" path="*.php" verb="*" modules="FastCgiModule" scriptProcessor="D:\Work\php-7.0.6\php-cgi.exe" resourceType="Unspecified" />
+        </handlers>
   </system.webServer>
 </configuration>
